<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="450dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/registrer_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registrer_etasjer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/edit_textview_style"
            android:hint="@string/etasjer"

            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrer_adresse" />

        <EditText
            android:id="@+id/registrer_beskrivelse"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/edit_textview_style"
            android:hint="@string/beskrivelse"
            android:maxHeight="200dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrer_etasjer" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/textview_background"
            android:text="@string/adresse"
            android:textColor="@color/blue"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/registrer_adresse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_registrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_style"
            android:drawableStart="@drawable/checkmark"
            android:paddingLeft="70dp"
            android:text="@string/registrer"
            android:textAlignment="textStart"


            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<LinearLayout
            android:id="@+id/etasjelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/registrer_adresse"
            tools:layout_editor_absoluteX="0dp"
            android:background="@drawable/edit_textview_style"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/etasjer"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:gravity="center"/>

            <NumberPicker
                android:id="@+id/registrer_etasjer"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:hint="@string/etasjer"

                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.733"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrer_adresse" />


        </LinearLayout>-->